# jarvis-voice

./: .env.example  AGENTS.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
conductor/: product.md  tech-stack.md  tracks.md
conductor/archive/rust_refactor_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/rust_refactor_20260406/: plan.md
conductor/tracks/transcriber_sync_20260405/: plan.md
jarvis_voice/: __init__.py  jarvis_transcriber.pyi  listener.py  test_porcupine.py  test_transcribe.py
src/: config.rs  lib.rs  model.rs  resampler.rs  transcriber.rs
src/audio/: input.rs  mod.rs  resampler.rs
src/core/: config.rs  mod.rs
src/python/: mod.rs
src/transcription/: engine.rs  mod.rs  model.rs
src/utils/: mod.rs
tests/: rust_audio.rs  rust_transcription.rs  test_listener.py  test_sync_api.py
